[package]
name = "last_defense"
version = "0.1.0"
edition = "2021"
authors = ["Joshua Dyer joshua.d.dyer7@gmail.com"]
license = "MIT"
repository = "https://github.com/dyerjos/LudumDare50"
description = """
Game submission for Ludum Dare 50. Defend your city from invaders.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.6.1", features = ["dynamic"] }